@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pychroot/pychroot-9999.ebuild,v 1.1 2015/03/25 04:20:16 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pychroot/pychroot-9999.ebuild,v 1.2 2015/03/25 04:32:50 radhermit Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_7,3_3,3_4} )
@@ -23,6 +23,7 @@ IUSE="test"
 
 RDEPEND=">=dev-python/snakeoil-0.6.1[${PYTHON_USEDEP}]"
 DEPEND="${RDEPEND}
+	dev-python/setuptools[${PYTHON_USEDEP}]
 	test? (
 		$(python_gen_cond_dep 'dev-python/mock[${PYTHON_USEDEP}]' python2_7)
 		dev-python/pytest[${PYTHON_USEDEP}]
